Fix font too small on mobile

--- a/_sass/_general.sass
+++ b/_sass/_general.sass
@@ -25,6 +25,10 @@ nav a
   &.active
     color: $color1-alt
 
+img
+  max-width: 100%
+  display: block
+
 .site-container
   width: 750px
   margin: auto
@@ -60,5 +64,7 @@ ul.post-list
     width: 95vw
     code
       overflow-wrap: break-word
-  .post-details > p
-    margin: 0.5em 0
+  .post-details
+    font-size: 0.9em
+    &>p
+      margin: 0.5em 0
